fix alignment issue in water mark color setting

--- a/app/assets/admin/css/admin.css
+++ b/app/assets/admin/css/admin.css
@@ -244,8 +244,7 @@
   vertical-align: top;
 }
 .rtm-option-wrapper .form-table td fieldset label {
-  display: block;
-  margin: 0 !important;
+  margin: 0 6px 0 0 !important;
 }
 .rtm-option-wrapper .form-table .rtm-form-radio label {
   margin-top: 5px !important;
@@ -719,7 +718,6 @@ input[type=checkbox]:checked ~ .switch-label:after {
   background: white;
   border-radius: 10px;
   box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.2);
-  background-image: -webkit-gradient(linear, left top, left bottom, color-stop(40%, white), to(#f0f0f0));
   background-image: -webkit-linear-gradient(top, white 40%, #f0f0f0);
   background-image: linear-gradient(to bottom, white 40%, #f0f0f0);
   -webkit-transition: left 0.15s ease-out;
@@ -736,7 +734,6 @@ input[type=checkbox]:checked ~ .switch-label:after {
   background: #f9f9f9;
   border-radius: 6px;
   box-shadow: inset 0 1px rgba(0, 0, 0, 0.02);
-  background-image: -webkit-gradient(linear, left top, left bottom, from(#eee), to(white));
   background-image: -webkit-linear-gradient(top, #eee, white);
   background-image: linear-gradient(to bottom, #eee, white);
 }
