--- a/app/assets/admin/css/sass/_components.scss
+++ b/app/assets/admin/css/sass/_components.scss
@@ -72,8 +72,7 @@
 			vertical-align: top;
 
 			fieldset label {
-				display: block;
-				margin: 0 !important;
+				margin: 0 6px 0 0 !important;
 			}
 		}
 
